tests/specs/ecosystem/lithen/fns/4_1_0.test
lithen/fns/4.1.0
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS2304 [ERROR]: Cannot find name 'HTMLElement'.
 */ export function createStyled(tagName: string, styles: LithenCSSString): HTMLElement {
                                                                            ~~~~~~~~~~~
    at file://<tmpdir>/src/css/create-styled.ts:10:77

TS2304 [ERROR]: Cannot find name 'DocumentFragment'.
 */ export function html(htmlTemplateStrings: HtmlStrings, ...values: unknown[]): DocumentFragment {
                                                                                  ~~~~~~~~~~~~~~~~
    at file://<tmpdir>/src/html/html-tag-fn.ts:20:83

TS2304 [ERROR]: Cannot find name 'Node'.
 */ export function el(htmlStrings: HtmlStrings, ...values: unknown[]): Node {
                                                                        ~~~~
    at file://<tmpdir>/src/html/html-tag-fn.ts:36:73

TS2304 [ERROR]: Cannot find name 'Node'.
 */ export function shell(fn: ShellRenderCallback): Node[] {
                                                    ~~~~
    at file://<tmpdir>/src/html/shell/shell.ts:22:53

TS2304 [ERROR]: Cannot find name 'Node'.
export function normalizeShellRenderNodes(rawNodes: unknown): Node[] {
                                                              ~~~~
    at file://<tmpdir>/src/html/shell/shell.ts:25:63

TS1331 [ERROR]: A property of a class whose type is a 'unique symbol' type must be both 'static' and 'readonly'.
  declare static REMOVE: unique symbol;
                 ~~~~~~
    at file://<tmpdir>/src/html/signals/data-signal.ts:8:18

TS2304 [ERROR]: Cannot find name 'DocumentFragment'.
 */ export function raw(strings: RawTagFnStrings, ...values: unknown[]): DocumentFragment {
                                                                         ~~~~~~~~~~~~~~~~
    at file://<tmpdir>/src/raw-html/raw-html-tag-fn.ts:21:74

Found 7 errors.

